<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/light_gray"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.AddCategoryFragment">

    <androidx.cardview.widget.CardView
        style="@style/card_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                style="@style/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_category" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_15sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/cat_name"
                style="@style/input_style"
                android:layout_width="match_parent"
                android:hint="@string/category_name" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_15sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_btn"
                style="@style/global_btn"
                android:layout_width="match_parent"
                android:text="@string/create" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>