<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".UI.Fragments.AddAssetFragment">


    <androidx.cardview.widget.CardView
        style="@style/card_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                style="@style/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_asset" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_10sdp" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_shape">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_7sdp"
                    app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
                    tools:ignore="ContentDescription" />

                <Spinner
                    android:id="@+id/cat_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:dropDownWidth="match_parent"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:popupBackground="@drawable/rounded_shape"
                    android:spinnerMode="dropdown" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/barcode_et"
                style="@style/input_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/barcode"
                android:inputType="number" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/description_et"
                style="@style/input_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="start"
                android:hint="@string/asset_description" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_btn"
                style="@style/global_btn"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/create" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>