<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context=".UI.Fragments.SelectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/add_category_card"
                style="@style/card_style"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:orientation="vertical"
                app:cardElevation="@dimen/_2sdp"
                app:contentPadding="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:padding="@dimen/_30sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_category_add"
                        tools:ignore="ContentDescription" />


                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="center"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:text="@string/create_category"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/add_asset_card"
                style="@style/card_style"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:orientation="vertical"
                app:cardElevation="@dimen/_2sdp"
                app:contentPadding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"

                        android:layout_height="@dimen/_120sdp"
                        android:padding="@dimen/_30sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_add_asset"
                        tools:ignore="ContentDescription" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="center"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:text="@string/create_asset"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/scan_card"
                style="@style/card_style"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:orientation="vertical"
                app:cardElevation="@dimen/_2sdp"
                app:contentPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_asset_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"

                        android:layout_height="@dimen/_120sdp"
                        android:padding="@dimen/_30sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_barcode"
                        tools:ignore="ContentDescription" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="center"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:text="@string/scan"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/search_card"
                style="@style/card_style"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:orientation="vertical"
                app:cardElevation="@dimen/_2sdp"
                app:contentPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_asset_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"

                        android:layout_height="@dimen/_120sdp"
                        android:padding="@dimen/_30sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_doc_text_search_svgrepo_com"
                        tools:ignore="ContentDescription" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="center"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:text="@string/search_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:padding="@dimen/_10sdp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/show_all_card"
                style="@style/card_style"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:orientation="vertical"
                app:cardElevation="@dimen/_2sdp"
                app:contentPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_asset_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"

                        android:layout_height="@dimen/_120sdp"
                        android:padding="@dimen/_30sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_list"
                        tools:ignore="ContentDescription" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="center"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:text="@string/show_all"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/import_card"
                style="@style/card_style"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:orientation="vertical"
                android:visibility="gone"
                app:cardElevation="@dimen/_2sdp"
                app:contentPadding="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"

                        android:layout_height="@dimen/_120sdp"
                        android:padding="@dimen/_30sdp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_resource_import"
                        tools:ignore="ContentDescription" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="center"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:text="@string/import_exl_file"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </LinearLayout>

</ScrollView>