<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardElevation="2dp"
        android:layoutDirection="rtl"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:fontFamily="@font/cairo_semibold"
                android:gravity="center"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:text="Asset Info"
                android:textColor="@color/white"
                android:textSize="@dimen/_8ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:baselineAligned="false"
                android:elevation="@dimen/_2sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"

                    android:background="@color/white"
                    android:orientation="vertical"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        android:text="@string/barcode"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8ssp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/light_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        android:text="@string/asset_description"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8ssp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/light_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        android:text="@string/category_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8ssp" />

                </LinearLayout>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/barcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8ssp"
                        tools:text="asdefaklsdjhfkjldsahfkjashdfjskhdfajkshdfkasjdhkfjahsdkljfhasdlkjfhasdkljfhaksldjhfalskdjfhalksjdhfalkjdsfhalkjsdfh" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/light_gray" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8ssp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/light_gray" />

                    <TextView
                        android:id="@+id/category_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8ssp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>